--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "console-ninja.toolsToEnableSupportAutomaticallyFor": {
         "live-server-extension": true,
         "live-preview-extension": true
-    }
+    },
+    "liveServer.settings.port": 5501
 }
